Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>It is written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>.</p>
 
-<p>It is distributed as free software, covered by the <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE"><strong>GNU GPLv3</strong></a>. If this is too restrictive for your needs and you would like to obtain it under different licensing terms, feel free to contact me.</p>
+<p>It is distributed as free software, covered by the <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE"><strong>MPLv2</strong></a>.</p>
 
 <h2>
 <a name="runtime-contracts-part-1-implementing-net-interfaces-at-runtime" class="anchor" href="#runtime-contracts-part-1-implementing-net-interfaces-at-runtime"><span class="octicon octicon-link"></span></a>Runtime Contracts, Part 1: Implementing .NET interfaces at runtime</h2>
