Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="main-content">
           <p><strong>TinyReflectiveToolkit</strong> is a small C# library that offers some cool reflection-related facilities. It's still a very early version and a stable API is far, far away.</p>
 
-<p>It is written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>. It is distributed as free software, covered by the <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE"><strong>MPLv2</strong></a>.</p>
+<p>It is written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>. It is distributed as free software, covered by the <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE"><strong>Mozilla Public License v2.0</strong></a>.</p>
 
 <h2>
 <a name="runtime-contracts-part-1-implementing-net-interfaces-at-runtime" class="anchor" href="#runtime-contracts-part-1-implementing-net-interfaces-at-runtime"><span class="octicon octicon-link"></span></a>Runtime Contracts, Part 1: Implementing .NET interfaces at runtime</h2>
