Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p>It is written and maintained by <a href="https://github.com/TChatzigiannakis"><strong>Theodoros Chatzigiannakis</strong></a>. It is distributed as free software, covered by the <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit/blob/master/LICENSE"><strong>Mozilla Public License v2.0</strong></a>.</p>
 
 <h2>
-<a name="runtime-contracts-part-1-implementing-net-interfaces-at-runtime" class="anchor" href="#runtime-contracts-part-1-implementing-net-interfaces-at-runtime"><span class="octicon octicon-link"></span></a>Runtime Contracts, Part 1: Implementing .NET interfaces at runtime</h2>
+<a id="runtime-contracts-part-1-implementing-net-interfaces-at-runtime" class="anchor" href="#runtime-contracts-part-1-implementing-net-interfaces-at-runtime" aria-hidden="true"><span class="octicon octicon-link"></span></a>Runtime Contracts, Part 1: Implementing .NET interfaces at runtime</h2>
 
 <p>When working with C# (or any other language with static and nominal typing), you may occasionally end up in a situation where <strong>you have two or more types that both expose one or more compatible methods:</strong></p>
 
@@ -119,14 +119,14 @@ var sum = values.Sum(x =&gt; x.GetValue());
 <p>Of course, it also has some disadvantages and limitations:</p>
 
 <ol>
-<li>The <code>ToContract&lt;TContract&gt;()</code> call can be expensive, because it uses reflection (to verify compatibility for each type/interface combination) and it emits IL dynamically to generate proxy types. However, this is largely mitigated by the fact that <strong>each type/interface combination is cached and existing proxy types are reused</strong> if they are applicable.</li>
-<li>The <code>ToContract&lt;TContract&gt;()</code> call can only verify compatibility at runtime, not compile time.</li>
+<li>The <code>ToContract&lt;T&gt;()</code> call can be expensive, because it uses reflection (to verify compatibility for each type/interface combination) and it emits IL dynamically to generate proxy types. However, this is largely mitigated by the fact that <strong>each type/interface combination is cached and existing proxy types are reused</strong> if they are applicable.</li>
+<li>The <code>ToContract&lt;T&gt;()</code> call can only verify compatibility at runtime, not compile time.</li>
 <li>The runtime type of the passed object must be declared public.</li>
-<li>The interface <code>TContract</code> must also be public.</li>
+<li>The interface <code>T</code> must also be public.</li>
 </ol>
 
 <h2>
-<a name="runtime-contracts-part-2-binding-to-operators" class="anchor" href="#runtime-contracts-part-2-binding-to-operators"><span class="octicon octicon-link"></span></a>Runtime Contracts, Part 2: Binding to Operators</h2>
+<a id="runtime-contracts-part-2-binding-to-operators" class="anchor" href="#runtime-contracts-part-2-binding-to-operators" aria-hidden="true"><span class="octicon octicon-link"></span></a>Runtime Contracts, Part 2: Binding to Operators</h2>
 
 <p><strong>Normal .NET interfaces are designed to only declare instanced public properties and methods.</strong> This means that an interface can't describe the existence of static methods, operators, conversions, etc. This usually makes sense from a design viewpoint, but there are times when it limits the expressiveness of the constraints.</p>
 
@@ -146,7 +146,7 @@ var sum = values.Sum(x =&gt; x.GetValue());
 <p>With that out of the way, whenever instances of these types are accessed through this contract, a <code>PerformCast()</code> method will be available and it will polymorphically invoke the correct cast operator for that particular runtime type.</p>
 
 <h2>
-<a name="assemblyloader-loading-dependencies-eagerly" class="anchor" href="#assemblyloader-loading-dependencies-eagerly"><span class="octicon octicon-link"></span></a>AssemblyLoader: Loading dependencies eagerly</h2>
+<a id="assemblyloader-loading-dependencies-eagerly" class="anchor" href="#assemblyloader-loading-dependencies-eagerly" aria-hidden="true"><span class="octicon octicon-link"></span></a>AssemblyLoader: Loading dependencies eagerly</h2>
 
 <p>By default, your runtime may be loading your application's dependencies lazily - that is, just before the first time you attempt to use them. This is good for applications that value short startup time and can handle small, distributed performance hits along the way.</p>
 
@@ -169,7 +169,7 @@ loader.LoadAllDependencies();
 </code></pre>
 
 <h2>
-<a name="extension-methods-for-reflection-types-and-collections" class="anchor" href="#extension-methods-for-reflection-types-and-collections"><span class="octicon octicon-link"></span></a>Extension methods for reflection types and collections</h2>
+<a id="extension-methods-for-reflection-types-and-collections" class="anchor" href="#extension-methods-for-reflection-types-and-collections" aria-hidden="true"><span class="octicon octicon-link"></span></a>Extension methods for reflection types and collections</h2>
 
 <p>Some built-in reflection-related methods aren't as easy to use as they could be. Some slightly more humane extension methods are offered, to make life a little bit easier:</p>
 
