Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@ public interface IStringToObject
 
 <p>But this is just a design decision or a limitation. It doesn't <em>have</em> to be like this. </p>
 
-<p>If the interface requires that the method returns any kind of <code>object</code>, then a method that returns a <code>string</code> (which <em>is</em> a kind of <code>object</code>) actually satisfies the contract of the method. In other words, <strong>return types could be covariant</strong> in inheritance scenarios.</p>
+<p>If the interface requires that the method returns any kind of <code>object</code>, then a method that returns a <code>string</code> (which <em>is</em> a kind of <code>object</code>) actually satisfies the contract. In other words, <strong>return types could be covariant</strong> in inheritance scenarios.</p>
 
-<p>Similarly, if an interface requires that a method takes a <code>string</code>, then a method that can take any <code>object</code> (including a <code>string</code>) actually satisfies the contract of the method as well. In other words, <strong>parameter types could be contravariant</strong> in inheritance scenarios.</p>
+<p>Similarly, if an interface requires that a method takes a <code>string</code>, then a method that can take any <code>object</code> (including a <code>string</code>) actually satisfies the contract as well. In other words, <strong>parameter types could be contravariant</strong> in inheritance scenarios.</p>
 
-<p>If you can see why this is so, then you'll be happy to know that <strong>this library supports covariance and contravariance</strong> (for method return types and parameter types respectively). In other words, the class shown above actually satisfies all four interfaces/contracts that were presented, using the .ToContract() extension method.</p>
+<p>If you can see why this is so, then you'll be happy to know that <strong>this library supports covariance and contravariance</strong> (for method return types and parameter types respectively). In other words, the class shown above actually satisfies all four interfaces/contracts that were presented, using the <code>.Satisfies()</code> and <code>.ToContract()</code> extension methods.</p>
 
 <p>The careful reader will notice that even where C# does support covariance and contravariance, it's applicable only for reference types. Or, with an example: an <code>IEnumerable&lt;string&gt;</code> is an <code>IEnumerable&lt;object&gt;</code> but an <code>IEnumerable&lt;int&gt;</code> isn't an <code>IEnumerable&lt;object&gt;</code>. This is because unboxed value types aren't proper <a href="http://en.wikipedia.org/wiki/Liskov_substitution_principle">Liskov subtypes</a> of <code>object</code>.</p>
 
