Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>TinyReflectiveToolkit</h1>
-        <h2>A small library containing utilities related to reflection under the CLR.</h2>
+        <h2>Structural contracts, eager assembly loading, easier reflection.</h2>
         <a href="https://github.com/TChatzigiannakis/TinyReflectiveToolkit" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
