Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ public interface IStringToObject
 }
 </code></pre>
 
-<p>The [Static] attribute means that the candidate types must have a <code>static</code> method with that signature. If they do, then they satisfy this contract.</p>
+<p>The <code>[Static]</code> attribute means that the candidate types must have a <code>static</code> method with that signature. If they do, then they satisfy this contract.</p>
 
 <p>Therefore, <strong>instances of <code>bool</code>, <code>int</code>, <code>double</code> satisfy the <code>IParsable</code> contract.</strong></p>
 
